# mpvpaper-rs

./: CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  README.md
src/: main.rs
