[package]
name = "mpvpaper-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.20"
wayland-client = { version = "0.31", features = ["system"] }
wayland-egl = "0.32"
khronos-egl = { version = "6", features = ["static"] }
libmpv2 = { version = "6", features = ["render"] }
calloop = { version = "0.14", features = ["signals"] }
calloop-wayland-source = "0.4"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
anyhow = "1"
